bug: sometimes winner check overlaps badly

--- a/src/components/Graphic/styles.scss
+++ b/src/components/Graphic/styles.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   height: 100%;
   width: unset;
+  container-type: inline-size;
 
   @container (max-aspect-ratio:10/8.8) {
     width: 100%;
